# the-big-rock-project

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: changelog-check.yml  quality-eval.yml
docs/: 00-index.md  01-product-overview.md  02-architecture.md  03-configuration.md  04-cli-reference.md  05-api-reference.md  06-web-ui-guide.md  07-embedding-cache.md  08-evaluation-and-tuning.md  09-security-and-privacy.md  10-operations-runbook.md  11-troubleshooting.md  12-development-and-testing.md  13-roadmap.md  agile-learning-system.md  changelog.md  compatibility-matrix.md  release-checklist.md  release-notes-template.md  versioning-policy.md
docs/releases/: 0.1.0.md
eval/: eval_dataset.real.json  eval_dataset.sample.json
reports/: metrics.jsonl
scripts/: check_changelog.py
src/semantic_code_navigator/: __init__.py  api.py  chunking.py  cli.py  config.py  discovery.py  embedding_cache.py  embeddings.py  eval.py  i18n.py  indexer.py  metrics.py  models.py  qa.py  security.py  store.py
src/semantic_code_navigator/web/: app.js  index.html  styles.css
tests/: test_core.py
